# flatex2parqet

./: LICENSE  README.md  pyproject.toml
flatex2parqet/: cli.py
