[tool.poetry]
name = "flatex2parqet"
version = "0.1.0"
description = "A small script converting a flatex-exported CSV to a parqet-readable one."
authors = ["Jeremias Yehdegho"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
flatex2parqet = "flatex2parqet.cli:main"
